# cross-chain-sdk

./: .gitignore  README.md
client/: README.md  package-lock.json  package.json  tsconfig.json
client/src/: config.ts  evm-client.ts  solana-client.ts  test-evm-to-solana.ts  test-solana-to-evm.ts
evm/: .gitattributes  .gitignore  README.md  foundry.toml
evm/script/: Deploy.s.sol  DeployBridge.s.sol  DeployMessenger.s.sol
evm/src/: CrossChainBridge.sol  CrossChainBridgeGetters.sol  CrossChainBridgeMessages.sol  CrossChainBridgeSetters.sol  CrossChainBridgeStructs.sol
solana/: .gitignore  Anchor.toml  Cargo.toml  README.md  docker-validator.sh  package-lock.json  package.json  tsconfig.json
solana/programs/cross-chain-bridge/: Cargo.toml
solana/programs/cross-chain-bridge/src/: context.rs  error.rs  lib.rs  message.rs
solana/programs/cross-chain-bridge/src/instructions/: initialize.rs  mod.rs  redeem_native_transfer.rs  redeem_wrapped_transfer.rs  register_foreign_contract.rs  send_native_tokens.rs  send_wrapped_tokens.rs  update_relayer_fee.rs
solana/programs/cross-chain-bridge/src/state/: foreign_contract.rs  redeemer_config.rs  sender_config.rs
solana/programs/cross-chain-messenger/: Cargo.toml
solana/programs/cross-chain-messenger/src/: context.rs  error.rs  lib.rs  message.rs
solana/programs/cross-chain-messenger/src/instructions/: close_received.rs  initialize.rs  mod.rs  receive_message.rs  register_emitter.rs  send_message.rs
solana/programs/cross-chain-messenger/src/state/: config.rs  foreign_emitter.rs  received.rs  wormhole_emitter.rs
(+54 files in other folders)
