[package]
name = "cross-chain-messenger"
version = "0.1.0"
description = "Cross-chain messaging via Wormhole Core"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cross_chain_messenger"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["mainnet"]
devnet = ["wormhole-anchor-sdk/solana-devnet"]
mainnet = ["wormhole-anchor-sdk/mainnet"]
idl-build = [
    "anchor-lang/idl-build",
    "wormhole-anchor-sdk/idl-build",
]

[dependencies]
anchor-lang = { workspace = true }
wormhole-anchor-sdk = { workspace = true }
wormhole-io = { workspace = true }
